# ExynosTools

./: ADB_WIFI_ANSWER.md  ADB_WIFI_QUICK.md  ADB_WIFI_SETUP.md  ADB_WIFI_VISUAL.md  AGENT_INSTRUCTIONS.md  ALL_VULKAN_FIXES_COMPLETE.md  CMakeLists.txt  COMPLETE_DEBUGGING_WORKFLOW.md  DEBUGGING_GUIDE.md  GUIDES_INDEX.md  INSTALLATION_READY.md  LOGCAT_FIX_NOTES.md  LOG_ANALYSIS_PATTERNS.md  PACKAGE_COMPARISON.md  QUICKSTART.md  README.txt  VULKAN_SYMBOL_FIX.md  WINLATOR_INSTALL.md  add_debug_logs.sh  android-cross-actual.txt  android-cross.txt  build_android_ndk.sh  build_cross_android.sh  build_meson_android.sh  build_simple.sh  build_simple_android.sh  build_termux.sh  build_termux_instructions.sh  full_debug_log.txt  meta.json  package_winlator.sh  xclipse_tools_icd.conf
loader/: exynostools-loader.sh
src/: bc_emulate.c  detect.c  hud.c  logging.c  logging.h  vk_funcs.c  vk_funcs.h  vk_stubs.c  xeno_wrapper.c
vulkan_layer/: VkLayer_exynostools.json
winlator/: winlator.conf
